Прочитал Как привести дела в порядок

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/kak_privesti_dela.jpg" title="Как привести дела в порядок"></th>	
 <th><img src="jpg/everyone_ironman.jpg" title="Железный человек есть в каждом"></th>		
 	<th><img src="data/12.2023.jpg"></th>
 <th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>			
@@ -370,12 +371,14 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Аллен Дэвид</h4></th>	
 <th colspan="2"><h4>Альмоссави Али</h4></th>
 <th colspan="2"><h4>Архангельский Глеб</h4></th>
 <th colspan="2"><h4>Асад-заде Чингиз</h4></th>
 <th colspan="2"><h4>Аткинсон Уильям</h4></th>
-<th colspan="2"><h4>Баллард Джеймс</h4></th>
 </tr><tr>
+<th><img src="jpg/kak_privesti_dela.jpg" title="Как привести дела в порядок"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/hackni.jpg" title="Хакни рутину. Как алгоритмы помогают справляться с беспорядком, не тупить в супермаркете и жить проще"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/findraiv.jpg" title="Финдрайв: как привлечь, сохранить и выгодно вложить свои деньги"></th> <th><img src="jpg/0.jpg"></th>
@@ -383,19 +386,19 @@
 <th><img src="jpg/sistema_razyma.jpg" title="Система Разума. Секреты ментализма"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/sila_misli.jpg" title="Закон привлечения и сила мысли"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/visotka.jpg" title="Высотка"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Баллард Джеймс</h4></th>
 <th colspan="2"><h4>Барден Фил</h4></th>
 <th colspan="2"><h4>Батырев Максим</h4></th>
 <th colspan="2"><h4>Белоусова Татьяна</h4></th>
 <th colspan="2"><h4>Беннет Арнольд</h4></th>
-<th colspan="2"><h4>Белинг Стив</h4></th>
 </tr><tr>
+<th><img src="jpg/visotka.jpg" title="Высотка"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/vzlom_marketinga.jpg" title="Взлом маркетинга. Наука о том, почему мы покупаем"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a18" src="jpg/45_taty.jpg" title="45 татуировок менеджера (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
@@ -403,27 +406,33 @@
 <th><img src="jpg/etiket_1.jpg" title="Этикет. Полный свод правил светского и делового общения"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/24.jpg" title="Как жить 24 часа в сутки"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/marvel_1.jpg" title="Мстители. Война Бесконечности. Путь героев"></th>
-<th><img src="jpg/marvel_2.jpg" title="Мстители. Финал. Путь героев"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4>Белинг Стив</h4></th>
 <th colspan="3"><h4>Белфорт Джордан</h4></th>
 <th colspan="2"><h4>Берг Натали</h4></th>
 <th colspan="2"><h4>Берджесс Энтони</h4></th>
-<th colspan="2"><h4>Берн Ронда</h4></th>
 </tr><tr>
+<th><img src="jpg/marvel_1.jpg" title="Мстители. Война Бесконечности. Путь героев"></th>
+<th><img src="jpg/marvel_2.jpg" title="Мстители. Финал. Путь героев"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a33" src="jpg/volk_1.jpg" title="Волк с Уолл-стрит (аудиокнига)"></th> 
 <th><img src="jpg/metod_volka.jpg" title="Метод волка с Уолл-стрит. Откровения лучшего продавца в мире"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a104" src="jpg/amazon.jpg" title="Amazon. От офиса в гараже до $10 млрд годового дохода (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a99" src="jpg/z_apelsin.jpg" title="Заводной апельсин (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
+</tr></table>
 
-<th><a id="a45" src="jpg/the_secret.jpg" title="Тайна (аудиокнига)"></th> 
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4>Берн Ронда</h4></th>
+</tr><tr>
+<th><a id="a45" src="jpg/the_secret.jpg" title="Тайна (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
