Прочитал Dragon Age. Украденный трон

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/dragon_age_1.jpg" title="Dragon Age. Украденный трон"></th>			
 <th><img src="jpg/kak_privesti_dela.jpg" title="Как привести дела в порядок"></th>	
 <th><img src="jpg/everyone_ironman.jpg" title="Железный человек есть в каждом"></th>		
 	<th><img src="data/12.2023.jpg"></th>
@@ -598,9 +599,12 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Гейдер Дэвид</h4></th>	
 <th colspan="4"><h4>Гейман Нил</h4></th>
 <th colspan="4"><h4>Геммел Дэвид</h4></th>
 </tr><tr>
+<th><img src="jpg/dragon_age_1.jpg" title="Dragon Age. Украденный трон"></th> <th><img src="jpg/0.jpg"></th> 	
+
 <th><img src="jpg/blagie_znamenia.jpg" title="Пратчетт Терри и Гейман Нил - Благие знамения"></th> 
 <th><img src="jpg/amerikanskie_bogi_1.jpg" title="Американские боги"></th>
 <th><img src="jpg/amerikanskie_bogi_2.jpg" title="Король горной долины"></th> <th><img src="jpg/0.jpg"></th> 
