Прочитал Кто заплачет когда ты умрешь

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/robin_sharma_1.jpg" title="Кто заплачет когда ты умрешь"></th>
 <th><img src="jpg/dragon_age_1.jpg" title="Dragon Age. Украденный трон"></th>			
 <th><img src="jpg/kak_privesti_dela.jpg" title="Как привести дела в порядок"></th>	
 <th><img src="jpg/everyone_ironman.jpg" title="Железный человек есть в каждом"></th>		
