Прочитал Обними меня крепче

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th>
 <th><img src="jpg/robin_sharma_1.jpg" title="Кто заплачет когда ты умрешь"></th>
 <th><img src="jpg/dragon_age_1.jpg" title="Dragon Age. Украденный трон"></th>			
 <th><img src="jpg/kak_privesti_dela.jpg" title="Как привести дела в порядок"></th>	
@@ -820,9 +821,11 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Джонсон Сью</h4></th>
 <th colspan="2"><h4>Дип Сэм</h4></th>
 </tr><tr>
-<th><img src="jpg/pyt_k_yspehy.jpg" title="Сэм Дип и Лил Сесмен - Верный путь к успеху"></th>  <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pyt_k_yspehy.jpg" title="Сэм Дип и Лил Сесмен - Верный путь к успеху"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
