Прочитал Внутри Coca-Cola

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th>
 <th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th>
 <th><img src="jpg/robin_sharma_1.jpg" title="Кто заплачет когда ты умрешь"></th>
 <th><img src="jpg/dragon_age_1.jpg" title="Dragon Age. Украденный трон"></th>			
@@ -906,10 +907,12 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Исделл Невил</h4></th>	
 <th colspan="7"><h4>Кавадло Дэнни и Эл</h4></th>
-<th colspan="3"><h4>Кавана Джон &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Кавашима Рюта</h4></th>
-</tr><tr>   
+<th colspan="1"><h4>Кавана Джон</h4></th>
+</tr><tr>  
+<th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/denni_kavadlo_1.jpg" title="Дэнни Кавадло - Стена алмазного пресса"></th>
 <th><img src="jpg/denni_kavadlo_2.jpg" title="Дэнни Кавадло - Чистая сила"></th>
 <th><img src="jpg/el_i_denni_kavadlo.jpg" title="Эл и Дэнни Кавадло - Уличные тренировки. Городской воркаут"></th>
@@ -917,18 +920,19 @@
 <th><img src="jpg/el_kavadlo_2.jpg" title="Эл Кавадло - Сила без границ"></th>
 <th><img src="jpg/el_kavadlo_3.jpg" title="Эл Кавадло - Экстремальная растяжка"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th>
+<th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Кавашима Рюта</h4></th>
 <th colspan="2"><h4>Карапинар Онур</h4></th>
 <th colspan="2"><h4>Кардон Грант</h4></th>
 <th colspan="2"><h4>Карназес Дин</h4>
 </tr><tr>   
+<th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/10X.jpg" title="Правило в 10 раз больше"></th> <th><img src="jpg/0.jpg"></th>
