Прочитал Слово пацана

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/slovo_pacana.jpg" title="Слово пацана. Криминальный Татарстан 1970–2010-х"></th>
 <th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th>
 <th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th>
 <th><img src="jpg/robin_sharma_1.jpg" title="Кто заплачет когда ты умрешь"></th>
@@ -571,9 +572,12 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Гапеев Валерий</h4></th> 
+<th colspan="2"><h4>Гараев Роберт</h4></th>
 <th colspan="2"><h4>Гард Рэй</h4></th>
 </tr><tr>
 <th><img src="jpg/noch_cmoka.jpg" title="Ноч цмока"></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/slovo_pacana.jpg" title="Слово пацана. Криминальный Татарстан 1970–2010-х"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a49" src="jpg/genezis.jpg" title="Генезис (книга-игра)"></a></th> 
 </tr></table>
