--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/01.2024.jpg"></th>
 <th><img src="jpg/slovo_pacana.jpg" title="Слово пацана. Криминальный Татарстан 1970–2010-х"></th>
 <th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th>
 <th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th>
