--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/dragon_age_2.jpg" title="Dragon Age. Призыв"></th>
 	<th><img src="data/01.2024.jpg"></th>
 <th><img src="jpg/slovo_pacana.jpg" title="Слово пацана. Криминальный Татарстан 1970–2010-х"></th>
 <th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th>
@@ -607,11 +608,12 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>Гейдер Дэвид</h4></th>	
+<th colspan="3"><h4>Гейдер Дэвид</h4></th>	
 <th colspan="4"><h4>Гейман Нил</h4></th>
 <th colspan="4"><h4>Геммел Дэвид</h4></th>
 </tr><tr>
-<th><img src="jpg/dragon_age_1.jpg" title="Dragon Age. Украденный трон"></th> <th><img src="jpg/0.jpg"></th> 	
+<th><img src="jpg/dragon_age_1.jpg" title="Dragon Age. Украденный трон"></th>
+<th><img src="jpg/dragon_age_2.jpg" title="Dragon Age. Призыв"></th> <th><img src="jpg/0.jpg"></th> 	
 
 <th><img src="jpg/blagie_znamenia.jpg" title="Пратчетт Терри и Гейман Нил - Благие знамения"></th> 
 <th><img src="jpg/amerikanskie_bogi_1.jpg" title="Американские боги"></th>
