Прочитал Дон Кихот Ламанчский

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a123" src="jpg/don_kihot.jpg" title="Дон Кихот Ламанчский (аудиокнига)"></a></th>		
 <th><img src="jpg/dragon_age_2.jpg" title="Dragon Age. Призыв"></th>
 	<th><img src="data/01.2024.jpg"></th>
 <th><img src="jpg/slovo_pacana.jpg" title="Слово пацана. Криминальный Татарстан 1970–2010-х"></th>
@@ -1459,9 +1460,13 @@
 
 
 <table><tr align="left"> 
-<th colspan="1"><h4>Рэнд  Айн</h4></th>
+<th colspan="2"><h4>Рэнд  Айн</h4></th>
+<th colspan="2"><h4>Сааведра Мигель</h4></th>
+
 </tr><tr>      
-<th><a id="a15" src="jpg/atlant.jpg" title="Атлант расправил плечи (аудиокнига)"></a></th> 
+<th><a id="a15" src="jpg/atlant.jpg" title="Атлант расправил плечи (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th> 
+
+<th><a id="a123" src="jpg/don_kihot.jpg" title="Дон Кихот Ламанчский (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
