--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th>			
 <th><a id="a123" src="jpg/don_kihot.jpg" title="Дон Кихот Ламанчский (аудиокнига)"></a></th>		
 <th><img src="jpg/dragon_age_2.jpg" title="Dragon Age. Призыв"></th>
 	<th><img src="data/01.2024.jpg"></th>
@@ -1029,28 +1030,31 @@
 
 <table><tr align="left"> 
 <th colspan="4"><h4>Клайн Эрнест</h4></th>
+<th colspan="2"><h4>Кларк Артур</h4></th>
 <th colspan="2"><h4>Кларк Дункан</h4></th>
 <th colspan="2"><h4>Клейсон Джордж</h4></th>
-<th colspan="2"><h4>Клир Джеймс</h4></th>
 </tr><tr>  
 <th><img src="jpg/ready_player_one.jpg" title="Первому игроку приготовиться"></th>
 <th><img src="jpg/ready_player_two.jpg" title="Второму игроку приготовиться"></th>
 <th><img src="jpg/armada.jpg" title="Армада"></th> <th><img src="jpg/0.jpg"></th>
 
+<th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>	
+
 <th><a id="a35" src="jpg/alibaba.jpg" title="Alibaba. История мирового восхождения от первого лица (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a26" src="jpg/vavilon.jpg" title="Самый богатый человек в Вавилоне (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/atom_priv.jpg" title="Атомные привычки. Как приобрести хорошие привычки и избавиться от плохих"></th> <th><img src="jpg/0.jpg"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Клир Джеймс</h4></th>
 <th colspan="2"><h4>Кляйн Марти</h4></th>
 <th colspan="4"><h4>Кови Стивен</h4></th>
 <th colspan="3"><h4>Ковтун Игорь</h4></th>
 </tr><tr>  
+<th><img src="jpg/atom_priv.jpg" title="Атомные привычки. Как приобрести хорошие привычки и избавиться от плохих"></th> <th><img src="jpg/0.jpg"></th> 
+	
 <th><img src="jpg/sex_intel.jpg" title="Сексуальный интеллект"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/7_navikov.jpg" title="Семь навыков высокоэффективных людей"></th>
