--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th>
 <th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th>
 <th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th>			
 <th><a id="a123" src="jpg/don_kihot.jpg" title="Дон Кихот Ламанчский (аудиокнига)"></a></th>		
@@ -1349,10 +1350,11 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>По Эдгар</h4></th>	
+<th colspan="3"><h4>По Эдгар</h4></th>	
 <th colspan="4"><h4>Портнягин Дмитрий</h4></th>
 </tr><tr> 
-<th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+<th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th>
+<th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a19" src="jpg/transformator.jpg" title="Трансформатор (аудиокнига)"></a></th> 
 <th><img src="jpg/transformator_2.jpg" title="Трансформатор 2. Как развить скорость в бизнесе и не сгореть"></th>
