Прочитал Падение дома Эшеров

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a129" src="jpg/po_4.jpg" title="Падение дома Эшеров (аудиокнига)"></a></th>
 <th><a id="a128" src="jpg/po_4.jpg" title="Овальный портрет (аудиокнига)"></a></th>
 <th><a id="a127" src="jpg/po_3.jpg" title="Чёрный кот (аудиокнига)"></a></th>
 <th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th>
@@ -1352,10 +1353,11 @@
 
 
 <table><tr align="left"> 
-<th colspan="5"><h4>По Эдгар</h4></th>	
+<th colspan="6"><h4>По Эдгар</h4></th>	
 <th colspan="4"><h4>Портнягин Дмитрий</h4></th>
 </tr><tr> 
 <th><a id="a128" src="jpg/po_4.jpg" title="Овальный портрет (аудиокнига)"></a></th>
+<th><a id="a129" src="jpg/po_4.jpg" title="Падение дома Эшеров (аудиокнига)"></a></th>
 <th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th>
 <th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th>
 <th><a id="a127" src="jpg/po_3.jpg" title="Чёрный кот (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
