Прочитал 2010: Одиссея Два

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>	
 <th><a id="a130" src="jpg/po_6.jpg" title="Тайна Мари Роже (аудиокнига)"></a></th>
 <th><a id="a129" src="jpg/po_5.jpg" title="Падение дома Эшеров (аудиокнига)"></a></th>
 <th><a id="a128" src="jpg/po_4.jpg" title="Овальный портрет (аудиокнига)"></a></th>
@@ -1036,19 +1037,20 @@
 
 <table><tr align="left"> 
 <th colspan="4"><h4>Клайн Эрнест</h4></th>
-<th colspan="2"><h4>Кларк Артур</h4></th>
-<th colspan="2"><h4>Кларк Дункан</h4></th>
-<th colspan="2"><h4>Клейсон Джордж</h4></th>
+<th colspan="3"><h4>Кларк Артур</h4></th>
+<th colspan="3"><h4>Кларк Дункан &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					Клейсон Джордж</h4></th>
 </tr><tr>  
 <th><img src="jpg/ready_player_one.jpg" title="Первому игроку приготовиться"></th>
 <th><img src="jpg/ready_player_two.jpg" title="Второму игроку приготовиться"></th>
 <th><img src="jpg/armada.jpg" title="Армада"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>	
+<th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th>
+<th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>	 <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a35" src="jpg/alibaba.jpg" title="Alibaba. История мирового восхождения от первого лица (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a26" src="jpg/vavilon.jpg" title="Самый богатый человек в Вавилоне (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
+<th><a id="a26" src="jpg/vavilon.jpg" title="Самый богатый человек в Вавилоне (аудиокнига)"></th> 
 </tr></table>
 
 
@@ -1823,9 +1825,6 @@
 <th><img src="jpg/python_3.jpg" title="Бэрри Пол - Изучаем программирование на Python"></th>
 <th><img src="jpg/algoritmi.jpg" title="Бхаргава Адитья - Грокаем алгоритмы"></th> 
 </tr></table>
-
-
-
 
 
 
