Прочитал Маска призрака

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/dragon_age_3.jpg" title="Dragon Age. Маска призрака"></th>
 <th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>	
 <th><a id="a130" src="jpg/po_6.jpg" title="Тайна Мари Роже (аудиокнига)"></a></th>
 <th><a id="a129" src="jpg/po_5.jpg" title="Падение дома Эшеров (аудиокнига)"></a></th>
@@ -617,28 +618,29 @@
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4>Гейдер Дэвид</h4></th>	
+<th colspan="4"><h4>Гейдер Дэвид</h4></th>	
 <th colspan="4"><h4>Гейман Нил</h4></th>
-<th colspan="4"><h4>Геммел Дэвид</h4></th>
 </tr><tr>
 <th><img src="jpg/dragon_age_1.jpg" title="Dragon Age. Украденный трон"></th>
-<th><img src="jpg/dragon_age_2.jpg" title="Dragon Age. Призыв"></th> <th><img src="jpg/0.jpg"></th> 	
+<th><img src="jpg/dragon_age_2.jpg" title="Dragon Age. Призыв"></th>
+<th><img src="jpg/dragon_age_3.jpg" title="Dragon Age. Маска призрака"></th> <th><img src="jpg/0.jpg"></th> 	
 
 <th><img src="jpg/blagie_znamenia.jpg" title="Пратчетт Терри и Гейман Нил - Благие знамения"></th> 
 <th><img src="jpg/amerikanskie_bogi_1.jpg" title="Американские боги"></th>
 <th><img src="jpg/amerikanskie_bogi_2.jpg" title="Король горной долины"></th> <th><img src="jpg/0.jpg"></th> 
-
-<th><img src="jpg/troia_1.jpg" title="Троя. Повелитель Серебряного лука"></th>
-<th><img src="jpg/troia_2.jpg" title="Троя. Грозовой щит"></th>
-<th><img src="jpg/troia_3.jpg" title="Троя. Падение царей"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="4"><h4>Геммел Дэвид</h4></th>
 <th colspan="4"><h4>Герберт Фрэнк</h4></th>
 <th colspan="2"><h4>Гладуэлл Малкольм</h4></th>
 </tr><tr>
+<th><img src="jpg/troia_1.jpg" title="Троя. Повелитель Серебряного лука"></th>
+<th><img src="jpg/troia_2.jpg" title="Троя. Грозовой щит"></th>
+<th><img src="jpg/troia_3.jpg" title="Троя. Падение царей"></th> <th><img src="jpg/0.jpg"></th> 
+
 <th><a id="a111" src="jpg/duna_1.jpg" title="Дюна (аудиокнига)"></a></th>
 <th><a id="a112" src="jpg/duna_2.jpg" title="Мессия Дюны (аудиокнига)"></a></th>
 <th><a id="a113" src="jpg/duna_3.jpg" title="Дети Дюны (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th> 
@@ -1359,11 +1361,11 @@
 <th colspan="7"><h4>По Эдгар</h4></th>	
 <th colspan="4"><h4>Портнягин Дмитрий</h4></th>
 </tr><tr> 
-<th><a id="a129" src="jpg/po_5.jpg" title="Овальный портрет (аудиокнига)"></a></th>
-<th><a id="a128" src="jpg/po_4.jpg" title="Падение дома Эшеров (аудиокнига)"></a></th>
 <th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th>
-<th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th>
+<th><a id="a129" src="jpg/po_5.jpg" title="Овальный портрет (аудиокнига)"></a></th>
 <th><a id="a130" src="jpg/po_6.jpg" title="Тайна Мари Роже (аудиокнига)"></a></th>
+<th><a id="a128" src="jpg/po_4.jpg" title="Падение дома Эшеров (аудиокнига)"></a></th>
+<th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th>
 <th><a id="a127" src="jpg/po_3.jpg" title="Чёрный кот (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a19" src="jpg/transformator.jpg" title="Трансформатор (аудиокнига)"></a></th> 
