--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a132" src="jpg/klark_3.jpg" title="2061: Одиссея Три (аудиокнига)"></a></th>	
 <th><img src="jpg/dragon_age_3.jpg" title="Dragon Age. Маска призрака"></th>
 <th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>	
 <th><a id="a130" src="jpg/po_6.jpg" title="Тайна Мари Роже (аудиокнига)"></a></th>
@@ -926,8 +927,8 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Исделл Невил</h4></th>	
-<th colspan="7"><h4>Кавадло Дэнни и Эл</h4></th>
-<th colspan="1"><h4>Кавана Джон</h4></th>
+<th colspan="6"><h4>Кавадло Дэнни и Эл</h4></th>
+<th colspan="2"><h4><div align="right">Кавана Джон</div></h4></th>
 </tr><tr>  
 <th><img src="jpg/coca-cola.jpg" title="Внутри Coca-Cola. История бренда № 1 глазами легендарного CEO"></th> <th><img src="jpg/0.jpg"></th>
 
@@ -1039,48 +1040,49 @@
 
 <table><tr align="left"> 
 <th colspan="4"><h4>Клайн Эрнест</h4></th>
-<th colspan="3"><h4>Кларк Артур</h4></th>
-<th colspan="3"><h4>Кларк Дункан &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Клейсон Джордж</h4></th>
+<th colspan="4"><h4>Кларк Артур</h4></th>
+<th colspan="2"><h4>Кларк Дункан</h4></th>
 </tr><tr>  
 <th><img src="jpg/ready_player_one.jpg" title="Первому игроку приготовиться"></th>
 <th><img src="jpg/ready_player_two.jpg" title="Второму игроку приготовиться"></th>
 <th><img src="jpg/armada.jpg" title="Армада"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th>
-<th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>	 <th><img src="jpg/0.jpg"></th>
+<th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>
+<th><a id="a132" src="jpg/klark_3.jpg" title="2061: Одиссея Три (аудиокнига)"></a></th>	 <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a35" src="jpg/alibaba.jpg" title="Alibaba. История мирового восхождения от первого лица (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a26" src="jpg/vavilon.jpg" title="Самый богатый человек в Вавилоне (аудиокнига)"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Клейсон Джордж</h4></th>
 <th colspan="2"><h4>Клир Джеймс</h4></th>
 <th colspan="2"><h4>Кляйн Марти</h4></th>
-<th colspan="4"><h4>Кови Стивен</h4></th>
-<th colspan="3"><h4>Ковтун Игорь</h4></th>
+<th colspan="3"><h4>Кови Стивен</h4></th>
 </tr><tr>  
+<th><a id="a26" src="jpg/vavilon.jpg" title="Самый богатый человек в Вавилоне (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th> 
+
 <th><img src="jpg/atom_priv.jpg" title="Атомные привычки. Как приобрести хорошие привычки и избавиться от плохих"></th> <th><img src="jpg/0.jpg"></th> 
 	
 <th><img src="jpg/sex_intel.jpg" title="Сексуальный интеллект"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/7_navikov.jpg" title="Семь навыков высокоэффективных людей"></th>
 <th><a id="a23" src="jpg/8_navik.jpg" title="Восьмой навык. От эффективности к величию (аудиокнига)"></th>
-<th><a id="a83" src="jpg/kovi_1.jpg" title="Фокус: Достижение приоритетных целей (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/kovtun_1.jpg" title="Прокачай себя. Занятия с собственным весом"></th> 
-<th><img src="jpg/kovtun_2.jpg" title="Прокачай себя. Тренировки дома"></th> 
+<th><a id="a83" src="jpg/kovi_1.jpg" title="Фокус: Достижение приоритетных целей (аудиокнига)"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4>Ковтун Игорь</h4></th>
 <th colspan="4"><h4>Коллинз Сьюзен</h4></th>
 <th colspan="2"><h4>Кононов Николай</h4></th>
 </tr><tr>  
+<th><img src="jpg/kovtun_1.jpg" title="Прокачай себя. Занятия с собственным весом"></th> 
+<th><img src="jpg/kovtun_2.jpg" title="Прокачай себя. Тренировки дома"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/hunger_games_1.jpg" title="Голодные игры"></th>
 <th><img src="jpg/hunger_games_2.jpg" title="И вспыхнет пламя"></th>
 <th><img src="jpg/hunger_games_3.jpg" title="Сойка-пересмешница"></th> <th><img src="jpg/0.jpg"></th>
@@ -1157,8 +1159,8 @@
 <th colspan="2"><h4>Лао-Цзы</h4></th>
 <th colspan="2"><h4>Ларссен Эрик</h4></th>
 <th colspan="3"><h4>Лаундес Лейл</h4></th>
-<th colspan="2"><h4>Лесков Н.С.</h4></th>
-<th colspan="2"><h4>Лесли Алекс</h4></th>
+<th colspan="1"><h4>Лесков Н.С.</h4></th>
+<th colspan="2"><h4><div align="right">Лесли Алекс</div></h4></th>
 </tr><tr>  
 <th><img src="jpg/dao_d_czin.jpg" title="Дао Дэ Цзин"></th> <th><img src="jpg/0.jpg"></th>
 
@@ -1358,7 +1360,7 @@
 
 
 <table><tr align="left"> 
-<th colspan="7"><h4>По Эдгар</h4></th>	
+<th colspan="7"><h4>По Эдгар Аллан</h4></th>	
 <th colspan="4"><h4>Портнягин Дмитрий</h4></th>
 </tr><tr> 
 <th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th>
