Прочитал 3001: Последняя Одиссея

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 <link rel="stylesheet" media="screen" type="text/css" title="Style" href="./css/style.css">
-<!-- Горизонтальный блок --> <div id="block"> </div> <!-- --> 
-<!-- Пробел --> &nbsp; <!-- --> 
+<!-- Горизонтальный блок --><!-- <div id="block"> </div> --> 
+<!-- Пробел --><!-- &nbsp; --> 
+<!-- Выравнивание справа --><!-- <div align="right">Текст</div> --> 
 <title>Books</title>
 </head><body><div id="body"><div id="body-con">
 
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/klark_4.jpg" title="3001: Последняя Одиссея"></th>
 <th><img src="jpg/perevodchik.jpg" title="Переводчик с пассивно-агрессивного на общечеловеческий"></th>
 	<th><img src="data/02.2024.jpg"></th>		
 <th><a id="a133" src="jpg/GTA.jpg" title="Потрачено. Беспредельная история GTA (аудиокнига)"></a></th>	
@@ -1047,7 +1049,7 @@
 <table><tr align="left"> 
 <th colspan="4"><h4>Клайн Эрнест</h4></th>
 <th colspan="4"><h4>Кларк Артур</h4></th>
-<th colspan="2"><h4>Кларк Дункан</h4></th>
+<th colspan="2"><h4><div align="right">Кларк Дункан</div></h4></th>
 </tr><tr>  
 <th><img src="jpg/ready_player_one.jpg" title="Первому игроку приготовиться"></th>
 <th><img src="jpg/ready_player_two.jpg" title="Второму игроку приготовиться"></th>
@@ -1055,9 +1057,10 @@
 
 <th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th>
 <th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>
-<th><a id="a132" src="jpg/klark_3.jpg" title="2061: Одиссея Три (аудиокнига)"></a></th>	 <th><img src="jpg/0.jpg"></th>
+<th><a id="a132" src="jpg/klark_3.jpg" title="2061: Одиссея Три (аудиокнига)"></a></th>
+<th><img src="jpg/klark_4.jpg" title="3001: Последняя Одиссея"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a35" src="jpg/alibaba.jpg" title="Alibaba. История мирового восхождения от первого лица (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
+<th><a id="a35" src="jpg/alibaba.jpg" title="Alibaba. История мирового восхождения от первого лица (аудиокнига)"></th>
 </tr></table>
 
 
