Прочитал НЕ ТУПИ

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/ne_typi.jpg" title="НЕ ТУПИ"></th>		
 <th><img src="jpg/klark_4.jpg" title="3001: Последняя Одиссея"></th>
 <th><img src="jpg/perevodchik.jpg" title="Переводчик с пассивно-агрессивного на общечеловеческий"></th>
 	<th><img src="data/02.2024.jpg"></th>		
@@ -1542,7 +1543,8 @@
 <th><img src="jpg/nachni_s_pochemy.jpg" title="Начни с ПОЧЕМУ"></th>
 <th><img src="jpg/lideri_ediat.jpg" title="Лидеры едят последними"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/ni_si.jpg" title="НИ СЫ. Восточная мудрость"></th> <th><img src="jpg/0.jpg"></th>  
+<th><img src="jpg/ni_si.jpg" title="НИ СЫ. Восточная мудрость"></th> 
+<th><img src="jpg/ne_typi.jpg" title="НЕ ТУПИ"></th> 
 </tr></table>
 
 
