--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th>		
 <th><img src="jpg/ne_typi.jpg" title="НЕ ТУПИ"></th>		
 <th><img src="jpg/klark_4.jpg" title="3001: Последняя Одиссея"></th>
 <th><img src="jpg/perevodchik.jpg" title="Переводчик с пассивно-агрессивного на общечеловеческий"></th>
@@ -1816,7 +1817,7 @@
 <table><tr align="left"> 
 <th colspan="7"><h4>Эльтеррус Иар</h4></th>
 <th colspan="3"><h4>Эмбирджи Эш &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Энтони Роберт</h4></th>
+					Эмерсон Клинт</h4></th>
 </tr><tr>  
 <th><img src="jpg/bremia_imperatora_1.jpg" title="Тропой мастеров"></th>
 <th><img src="jpg/bremia_imperatora_2.jpg" title="Скрытое пророчество"></th>
@@ -1827,15 +1828,20 @@
 
 <th><a id="a114" src="jpg/sr_palec.jpg" title="Проект Средний палец (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/gl_sec.jpg" title="Главные секреты абсолютной уверенности в себе"></th>
+<th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th>
+
+
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Энтони Роберт</h4></th>		
 <th colspan="2"><h4>Яррос Ребекка</h4></th>	
 <th colspan="4"><h4>Python</h4></th>
 </tr><tr>  
+<th><img src="jpg/gl_sec.jpg" title="Главные секреты абсолютной уверенности в себе"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/python_1.jpg" title="Swaroop Chitlur - A Byte of Python (Russian)"></th>
