Прочитал Король Лир

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a134" src="jpg/korol_lir.jpg" title="Король Лир (аудиокнига)"></a></th>
 <th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th>		
 <th><img src="jpg/ne_typi.jpg" title="НЕ ТУПИ"></th>		
 <th><img src="jpg/klark_4.jpg" title="3001: Последняя Одиссея"></th>
@@ -1776,79 +1777,85 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Шевелева Ольга</h4></th>
+<th colspan="2"><h4>Шекспир Уильям</h4></th>
 <th colspan="3"><h4>Шефер Бодо</h4></th>
-<th colspan="2"><h4>Шмидт Эрик</h4></th>
-<th colspan="3"><h4>Шрайбер Флора &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Шульц Говард</h4></th>
+<th colspan="3"><h4>Шмидт Эрик &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					Шрайбер Флора</h4></th>
 </tr><tr>  
 <th><img src="jpg/atlet_i_etiket.jpg" title="Атлет и этикет"></th> <th><img src="jpg/0.jpg"></th>
+
+<th><a id="a134" src="jpg/korol_lir.jpg" title="Король Лир (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a69" src="jpg/mani.jpg" title="Мани, или Азбука денег (аудиокнига)"></a></th>
 <th><a id="a72" src="jpg/shefer_2.jpg" title="Законы победителей (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a47" src="jpg/google.jpg" title="Как работает Google (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/sivilla.jpg" title="Сивилла"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a34" src="jpg/starbucks.jpg" title="Как чашка за чашкой строилась STARBUCKS (аудиокнига)"></a></th> 
+<th><img src="jpg/sivilla.jpg" title="Сивилла"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Шульц Говард</h4></th>
 <th colspan="2"><h4>Щеголев Илья</h4></th>
 <th colspan="2"><h4>Экер Харв</h4></th>
 <th colspan="3"><h4>Экман Пол</h4></th>
-<th colspan="3"><h4>Элрод Хэл</h4></th>
 </tr><tr>  
+<th><a id="a34" src="jpg/starbucks.jpg" title="Как чашка за чашкой строилась STARBUCKS (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/tainiy_yazyk_tela.jpg" title="Илья Щеголев и Владимир Людвич - Тайный язык тела"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/dumai_kak_millioner.jpg" title="Думай как миллионер"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/paul_ekman_1.jpg" title="Психология лжи"></th>
-<th><img src="jpg/paul_ekman_2.jpg" title="Узнай лжеца по выражению лица"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/magia_ytra.jpg" title="Магия утра"></th> 
-<th><a id="a57" src="jpg/magia_ytra_2.jpg" title="Магия утра для финансовой свободы. Как заложить основы счастливой и богатой жизни (аудиокнига)"></a></th>
+<th><img src="jpg/paul_ekman_2.jpg" title="Узнай лжеца по выражению лица"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4>Элрод Хэл</h4></th>
 <th colspan="7"><h4>Эльтеррус Иар</h4></th>
-<th colspan="3"><h4>Эмбирджи Эш &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					Эмерсон Клинт</h4></th>
 </tr><tr>  
+<th><img src="jpg/magia_ytra.jpg" title="Магия утра"></th> 
+<th><a id="a57" src="jpg/magia_ytra_2.jpg" title="Магия утра для финансовой свободы. Как заложить основы счастливой и богатой жизни (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/bremia_imperatora_1.jpg" title="Тропой мастеров"></th>
 <th><img src="jpg/bremia_imperatora_2.jpg" title="Скрытое пророчество"></th>
 <th><img src="jpg/bremia_imperatora_3.jpg" title="Навстречу судьбе"></th>
 <th><img src="jpg/bremia_imperatora_4.jpg" title="Незваные гости"></th>
 <th><img src="jpg/bremia_imperatora_5.jpg" title="Дальний путь"></th>
-<th><img src="jpg/bremia_imperatora_6.jpg" title="Дорога домой"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a114" src="jpg/sr_palec.jpg" title="Проект Средний палец (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th>
-
-
+<th><img src="jpg/bremia_imperatora_6.jpg" title="Дорога домой"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>Эмбирджи Эш</h4></th>
+<th colspan="2"><h4>Эмерсон Клинт</h4></th>
 <th colspan="2"><h4>Энтони Роберт</h4></th>		
 <th colspan="2"><h4>Яррос Ребекка</h4></th>	
-<th colspan="4"><h4>Python</h4></th>
 </tr><tr>  
+<th><a id="a114" src="jpg/sr_palec.jpg" title="Проект Средний палец (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th> <th><img src="jpg/0.jpg"></th>
+
+
 <th><img src="jpg/gl_sec.jpg" title="Главные секреты абсолютной уверенности в себе"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+</tr></table>
 
+
+
+<table><tr align="left"> 
+<th colspan="4"><h4>Python</h4></th>
+</tr><tr> 
 <th><img src="jpg/python_1.jpg" title="Swaroop Chitlur - A Byte of Python (Russian)"></th>
 <th><img src="jpg/python_2.jpg" title="МакГрат Майк - Программирование на Python для начинающих"></th> 
 <th><img src="jpg/python_3.jpg" title="Бэрри Пол - Изучаем программирование на Python"></th>
 <th><img src="jpg/algoritmi.jpg" title="Бхаргава Адитья - Грокаем алгоритмы"></th> 
-</tr></table>
 
 
 
