--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/03.2024.jpg"></th>			
 <th><a id="a134" src="jpg/korol_lir.jpg" title="Король Лир (аудиокнига)"></a></th>
 <th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th>		
 <th><img src="jpg/ne_typi.jpg" title="НЕ ТУПИ"></th>		
