--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/vizhivsnie_v_dikih.jpg" title="Выживание в дикой природе и экстремальных ситуациях. 100 ключевых навыков по методике спецслужб"></th>
 	<th><img src="data/03.2024.jpg"></th>			
 <th><a id="a134" src="jpg/korol_lir.jpg" title="Король Лир (аудиокнига)"></a></th>
 <th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th>		
@@ -1834,13 +1835,14 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Эмбирджи Эш</h4></th>
-<th colspan="2"><h4>Эмерсон Клинт</h4></th>
+<th colspan="3"><h4>Эмерсон Клинт</h4></th>
 <th colspan="2"><h4>Энтони Роберт</h4></th>		
 <th colspan="2"><h4>Яррос Ребекка</h4></th>	
 </tr><tr>  
 <th><a id="a114" src="jpg/sr_palec.jpg" title="Проект Средний палец (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/vizhivanie.jpg" title="Выживание по методике спецслужб. 100 ключевых навыков"></th>
+<th><img src="jpg/vizhivsnie_v_dikih.jpg" title="Выживание в дикой природе и экстремальных ситуациях. 100 ключевых навыков по методике спецслужб"></th> <th><img src="jpg/0.jpg"></th>
 
 
 <th><img src="jpg/gl_sec.jpg" title="Главные секреты абсолютной уверенности в себе"></th> <th><img src="jpg/0.jpg"></th>
