Прочитал Скоростная полоса миллионера

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/speed_line.jpg" title="Скоростная полоса миллионера. Как разбогатеть быстро и выйти на пенсию молодым"></th>		
 <th><img src="jpg/vizhivsnie_v_dikih.jpg" title="Выживание в дикой природе и экстремальных ситуациях. 100 ключевых навыков по методике спецслужб"></th>
 	<th><img src="data/03.2024.jpg"></th>			
 <th><a id="a134" src="jpg/korol_lir.jpg" title="Король Лир (аудиокнига)"></a></th>
@@ -818,47 +819,48 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>Дейда Дэвид</h4></th>
-<th colspan="6"><h4>Денисов Вадим</h4></th>
+<th colspan="2"><h4>Демарко Эм-Джей</h4></th>
 </tr><tr>
 <th><a id="a10" src="jpg/pyt_na100iaschego.jpg" title="Путь настоящего мужчины (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
+<th><img src="jpg/speed_line.jpg" title="Скоростная полоса миллионера. Как разбогатеть быстро и выйти на пенсию молодым"></th> <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="8"><h4>Денисов Вадим</h4></th>
+<th colspan="2"><h4>Дефо Даниэль</h4></th>
+</tr><tr>
 <th><img src="jpg/zamok_1.jpg" title="Замок Россия"></th>
 <th><img src="jpg/zamok_2.jpg" title="Экспансия"></th>
 <th><img src="jpg/zamok_3.jpg" title="Спасатель"></th>
 <th><img src="jpg/zamok_4.jpg" title="Русский Союз"></th>
 <th><img src="jpg/zamok_5.jpg" title="Колония"></th>
 <th><a id="a120" src="jpg/zamok_6.jpg" title="Командировка (аудиокнига)"></a></th>
-<th><a id="a121" src="jpg/zamok_6.jpg" title="Возвращение (аудиокнига)"></a></th> 
+<th><a id="a121" src="jpg/zamok_6.jpg" title="Возвращение (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
+<th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
+<th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4>Дефо Даниэль</h4></th>
 <th colspan="2"><h4>Джайлс Льюри</h4></th>	
 <th colspan="2"><h4>Джей Мэг</h4></th>
-<th colspan="3"><h4>Джеймс Эрика</h4></th>
+<th colspan="4"><h4>Джеймс Эрика</h4></th>
+<th colspan="2"><h4>Джонсон Сью</h4></th>
 </tr><tr>
-<th><img src="jpg/robinzon_kruzo.jpg" title="Робинзон Крузо"></th>
-<th><img src="jpg/robinzon_kruzo_2.jpg" title="Дальнейшие приключения Робинзона Крузо"></th> <th><img src="jpg/0.jpg"></th>
-
 <th><a id="a38" src="jpg/kak_coca_cola.jpg" title="Как Coca-Cola завоевала мир. 101 успешный кейс от брендов с мировым именем (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a16" src="jpg/vazhnie_godi.jpg" title="Важные годы (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th> 
 
 <th><img src="jpg/50_ottenkov_1.jpg" title="Пятьдесят оттенков серого"></th>
 <th><img src="jpg/50_ottenkov_2.jpg" title=" На пятьдесят оттенков темнее"></th>
-<th><img src="jpg/50_ottenkov_3.jpg" title=" На пятьдесят оттенков светлее"></th>
-</tr></table>
+<th><img src="jpg/50_ottenkov_3.jpg" title=" На пятьдесят оттенков светлее"></th> <th><img src="jpg/0.jpg"></th>
 
-
-
-<table><tr align="left"> 
-<th colspan="2"><h4>Джонсон Сью</h4></th>
-<th colspan="2"><h4>Дип Сэм</h4></th>
-</tr><tr>
 <th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th> <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/pyt_k_yspehy.jpg" title="Сэм Дип и Лил Сесмен - Верный путь к успеху"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
@@ -885,6 +887,14 @@
 <th><img src="jpg/arena_13_1.jpg" title="Арена 13. Кровь"></th>
 <th><img src="jpg/arena_13_2.jpg" title="Арена 13. Жертва"></th>
 <th><img src="jpg/arena_13_3.jpg" title="Арена 13. Воин"></th> 
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4>Дип Сэм</h4></th>
+</tr><tr> 
+<th><img src="jpg/pyt_k_yspehy.jpg" title="Сэм Дип и Лил Сесмен - Верный путь к успеху"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
