Прочитал Андрей. Книга 1: Начало

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/andrei_1.jpg" title="Андрей. Книга 1: Начало"></th>	
 <th><img src="jpg/speed_line.jpg" title="Скоростная полоса миллионера. Как разбогатеть быстро и выйти на пенсию молодым"></th>		
 <th><img src="jpg/vizhivsnie_v_dikih.jpg" title="Выживание в дикой природе и экстремальных ситуациях. 100 ключевых навыков по методике спецслужб"></th>
 	<th><img src="data/03.2024.jpg"></th>			
@@ -1469,6 +1470,7 @@
 <th colspan="4"><h4>Роббинс  Тони</h4></th>
 <th colspan="2"><h4>Рокфеллер Джон</h4></th>
 <th colspan="2"><h4>Романова Анна</h4></th>
+<th colspan="2"><h4>Романовский Борис</h4></th>
 </tr><tr>        
 <th><a id="a3" src="jpg/zhivi_so_strastyu.jpg" title="Живи со страстью (аудиокнига)"></a></th> 
 <th><a id="a8" src="jpg/robbins_2.jpg" title="Книга о власти над собой (аудиокнига)"></a></th>
@@ -1477,6 +1479,8 @@
 <th><img src="jpg/rokfeller.jpg" title="Как я нажил 500 000 000. Мемуары миллиардера"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/sovremennyiy_etiket.jpg" title="Современный этикет. Большая энциклопедия"></th> <th><img src="jpg/0.jpg"></th> 
+
+<th><img src="jpg/andrei_1.jpg" title="Андрей. Книга 1: Начало"></th> <th><img src="jpg/0.jpg"></th> 
 </tr></table>
 
 
