Прочитал Андрей. Книга 2: Архитекторы

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/andrei_2.jpg" title="Андрей. Книга 2: Архитекторы"></th>		
 <th><img src="jpg/andrei_1.jpg" title="Андрей. Книга 1: Начало"></th>	
 <th><img src="jpg/speed_line.jpg" title="Скоростная полоса миллионера. Как разбогатеть быстро и выйти на пенсию молодым"></th>		
 <th><img src="jpg/vizhivsnie_v_dikih.jpg" title="Выживание в дикой природе и экстремальных ситуациях. 100 ключевых навыков по методике спецслужб"></th>
@@ -1480,7 +1481,8 @@
 
 <th><img src="jpg/sovremennyiy_etiket.jpg" title="Современный этикет. Большая энциклопедия"></th> <th><img src="jpg/0.jpg"></th> 
 
-<th><img src="jpg/andrei_1.jpg" title="Андрей. Книга 1: Начало"></th> <th><img src="jpg/0.jpg"></th> 
+<th><img src="jpg/andrei_1.jpg" title="Андрей. Книга 1: Начало"></th>
+<th><img src="jpg/andrei_2.jpg" title="Андрей. Книга 2: Архитекторы"></th>
 </tr></table>
 
 
