Прочитал Андрей. Книга 4: Война Кланов

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/andrei_4.jpg" title="Андрей. Книга 4: Война Кланов"></th>
 <th><img src="jpg/andrei_3.jpg" title="Андрей. Книга 3: Сангис"></th>	
 <th><img src="jpg/andrei_2.jpg" title="Андрей. Книга 2: Архитекторы"></th>		
 <th><img src="jpg/andrei_1.jpg" title="Андрей. Книга 1: Начало"></th>	
@@ -1490,6 +1491,7 @@
 <th><img src="jpg/andrei_1.jpg" title="Андрей. Книга 1: Начало"></th>
 <th><img src="jpg/andrei_2.jpg" title="Андрей. Книга 2: Архитекторы"></th>
 <th><img src="jpg/andrei_3.jpg" title="Андрей. Книга 3: Сангис"></th>	
+<th><img src="jpg/andrei_4.jpg" title="Андрей. Книга 4: Война Кланов"></th>
 </tr></table>
 
 
